--- a/src/aui-form-builder/assets/aui-form-builder-settings-modal-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-settings-modal-core.css
@@ -24,6 +24,15 @@
     bottom: 0;
 }
 
+.sm-screen .form-builder-field-settings.modal-dialog {
+    overflow: auto;
+}
+
+.sm-screen .form-builder-field-settings .modal-content {
+    height: auto;
+    min-height: 100%;
+}
+
 .form-builder-field-settings .modal-header {
     top: 0;
 }
