Hides toolbar if a column or row are moving

--- a/src/aui-form-builder/assets/aui-form-builder-layout-builder-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-layout-builder-core.css
@@ -52,6 +52,10 @@
     z-index: 1;
 }
 
+.layout-builder-moving .form-builder-field-toolbar {
+    display: none;
+}
+
 .layout-builder-move-cut-button.layout-builder-move-cut-row-button {
     border-radius: 50%;
     display: none;
