--- a/src/aui-form-builder/assets/aui-form-builder-field-list-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-field-list-core.css
@@ -1,5 +1,7 @@
 .form-builder-choose-col-move-target .form-builder-field-list-add-button,
-.form-builder-choose-col-move-target .form-builder-field-list-empty .form-builder-field-list-add-button {
+.form-builder-choose-col-move-target .form-builder-field-list-empty .form-builder-field-list-add-button,
+.layout-builder-moving .form-builder-field-list-add-button,
+.layout-builder-moving .form-builder-field-list-add-button-visible .form-builder-field-list-add-button {
     display: none;
 }
 
